--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,14 +1,10 @@
 = form_for @user, html: {role: "form"} do |f|
   .form-group
-    = f.label :first_name
-    = f.text_field :first_name, {class: "form-controll"}
+    = f.text_field :first_name, {class: "form-control", placeholder: "first name"}
   .form-group
-    = f.label :last_name
-    = f.text_field :last_name, {class: "form-controll"}
+    = f.text_field :last_name, {class: "form-control", placeholder: "last name"}
   .form-group
-    = f.label :email
-    = f.text_field :email, {class: "form-controll"}
+    = f.text_field :email, {class: "form-control", placeholder: "email"}
   .form-group
-    = f.label :password
-    = f.text_field :password, {class: "form-controll"}
-  = f.submit "Create New User", class: "button button-submit"
+    = f.text_field :password, {class: "form-control", placeholder: "password"}
+    = f.submit "Create New User", class: "button button-submit"
