--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,7 @@
+@import 'reset';
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "color";
+@import "typography";
+@import "button";
+@import "layout";
