Layout, colors, and typography

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -4,17 +4,28 @@ body
 
 .wrapper
   background-color: white
-  margin: 25px
+  margin: 35px
+  min-height: 800px
 
 .log
   float: right
-  margin: 5px 15px
+  margin: 20px 30px
 
 .admin
   float: right
   margin-right: 15px
-  margin-top: 5px
+  margin-top: 20px
 
 .main
   margin: 50px
   clear: both
+  padding: 50px
+
+.form-control
+  border-radius: 0
+  border: 1px solid #ddd
+
+.flash
+  margin-left: 50px
+  margin-top: 20px
+  display: inline-block
