--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,3 +1,5 @@
+%h1 new user
+
 = form_for @user, html: {role: "form"} do |f|
   .form-group
     = f.text_field :first_name, {class: "form-control", placeholder: "first name"}
@@ -7,4 +9,4 @@
     = f.text_field :email, {class: "form-control", placeholder: "email"}
   .form-group
     = f.text_field :password, {class: "form-control", placeholder: "password"}
-    = f.submit "Create New User", class: "button button-submit"
+    = f.submit "Create New User", class: "button button-submit form-control"
