--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -29,3 +29,8 @@ body
   margin-left: 50px
   margin-top: 20px
   display: inline-block
+
+.form-group
+  width: 50%
+  margin-right: auto
+  margin-left: auto
