--- a/app/views/recipes/new.html.haml
+++ b/app/views/recipes/new.html.haml
@@ -6,6 +6,6 @@
   .form-group
     = f.text_field :description, class: 'form-control', placeholder: 'description'
   .form-group
-    = render partial: 'recipe/ingredient', collection: @recipe.ingredients
+    = render :partial => 'recipes/ingredient'
   .form-group
     = f.submit 'Create new recipe', class: "form-control button-submit"
