Add disabled button

--- a/app/assets/stylesheets/button.sass
+++ b/app/assets/stylesheets/button.sass
@@ -17,6 +17,10 @@ input.button-submit
   @extend .button
   color: $mdblue
 
+.button-disabled
+  @extend .button
+  color: #aaa
+  background-color: #eee
 
 .button-submit:hover
   background-color: $mdblue
