--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -7,19 +7,28 @@ body
   margin: 35px
   min-height: 800px
 
-.log
-  float: right
-  margin: 20px 30px
+.navbar
+  margin-right: 20px
 
-.admin
+.navbar-nav
   float: right
-  margin-right: 15px
-  margin-top: 20px
+  padding: 20px 30px
+  font-family: $header_font
+  font-size: 16px
+  font-weight: bold
 
-.main
+.navbar-nav:hover
+  color: $dkblue
+  background-color: $yellow
+
+.main h1
   margin: 50px
   clear: both
   padding: 50px
+
+.main img
+  margin: 0
+  padding: 0
 
 .form-control
   border-radius: 0
