Add footer and recipe views

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -16,19 +16,42 @@ body
   font-family: $header_font
   font-size: 16px
   font-weight: bold
+  border-bottom: 4px solid white
 
 .navbar-nav:hover
   color: $dkblue
-  background-color: $yellow
+  border-bottom: 4px solid $ltblue
 
-.main h1
+.main
   margin: 50px
   clear: both
   padding: 50px
+  min-height: 800px
 
 .main img
   margin: 0
   padding: 0
+
+.footer
+  margin-top: 30px
+  min-height: 200px
+  background-color: $ltblue
+  padding: 20px
+
+.footer p
+  color: $ltgray
+
+.footer-links
+  text-align: right
+  padding-right: 15px
+
+.footer-link
+  color: $ltgray
+  border-bottom: 2px solid $ltblue
+
+.footer-link:hover
+  color: $ltgray
+  border-bottom: 2px solid $yellow
 
 .form-control
   border-radius: 0
