--- a/app/assets/stylesheets/typography.sass
+++ b/app/assets/stylesheets/typography.sass
@@ -17,3 +17,10 @@ p, a, li, input, label, .log, .flash, .admin
 
 .flash
   color: $wrmred
+
+.footer-link a
+  color: $ltblue
+
+.footer-link a:hover
+  border-bottom: 4px solid $yellow
+  color: $ltblue
