--- a/app/views/recipes/_ingredient.html.haml
+++ b/app/views/recipes/_ingredient.html.haml
@@ -1,4 +1,4 @@
-= form_for new_user_recipe_ingredient_path(@recipe.user, @recipe) do |f|
+= form_for [@recipe.user, @recipe, @ingredient] do |f|
   .form-group
     = f.text_field :name, class: 'form-control', placeholder: 'name'
   .form-group
