--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -66,3 +66,15 @@ body
   width: 50%
   margin-right: auto
   margin-left: auto
+
+.recipe
+  width: 80%
+  border: 1px dashed $ltblue
+  padding: 20px
+  margin-bottom: 20px
+  margin-right: auto
+  margin-left: auto
+
+.ingredient, .direction
+  font-family: $body_font
+  color: $dkgray
