--- a/app/assets/stylesheets/typography.sass
+++ b/app/assets/stylesheets/typography.sass
@@ -24,3 +24,6 @@ p, a, li, input, label, .log, .flash, .admin
 .footer-link a:hover
   border-bottom: 4px solid $yellow
   color: $ltblue
+
+ol
+  list-style: decimal
