--- a/app/views/recipes/show.html.haml
+++ b/app/views/recipes/show.html.haml
@@ -1,11 +1,1 @@
-%h1
-  = @recipe.title
-
-%h2
-  = @recipe.description
-
-%ul
-  - @recipe.ingredients.each do |ingredient|
-    %li
-      = ingredient.amount
-      = ingredient.name
+= render :partial => 'recipe'
